--- a/public/office.html
+++ b/public/office.html
@@ -97,6 +97,15 @@
   <div class="container">
     <div class="card">
       <h2>Failed Registration List</h2>
+      <h3 id="provinceTitle"
+    style="
+      margin:6px 0 10px;
+      text-align:center;
+      color:#0033a0;
+      font-weight:800;
+      letter-spacing:0.5px;">
+</h3>
+
       <p id="subText">
         Showing failed registrations for your assigned province only
       </p>
