--- a/public/office.html
+++ b/public/office.html
@@ -76,6 +76,15 @@
     table{ width:100%; border-collapse: collapse; background:#fff; }
     th, td{ padding: 10px 12px; border-bottom:1px solid var(--border); font-size: 13px; }
     th{ background:#f3f7ff; text-align:left; }
+
+    .province-title{
+      text-align:center;
+      font-size: 20px;
+      font-weight: 900;
+      color: var(--primary);
+      margin: 6px 0 6px;
+      letter-spacing: .5px;
+    }
   </style>
 </head>
 
@@ -84,7 +93,7 @@
     <div class="topbar-inner">
       <div>
         <strong>PSA • National ID System</strong><br>
-        <small>Office Portal — Province Based</small>
+        <small>Office Portal</small>
       </div>
 
       <div class="user-pill">
@@ -96,18 +105,13 @@
 
   <div class="container">
     <div class="card">
-      <h2>Failed Registration List</h2>
-      <h3 id="provinceTitle"
-    style="
-      margin:6px 0 10px;
-      text-align:center;
-      color:#0033a0;
-      font-weight:800;
-      letter-spacing:0.5px;">
-</h3>
+      <h2 style="margin:0;">Failed Registration List</h2>
 
-      <p id="subText">
-        Showing failed registrations for your assigned province only
+      <!-- ✅ CENTER TITLE -->
+      <div id="provinceTitle" class="province-title"></div>
+
+      <p id="subText" style="text-align:center; color:#6b7280;">
+        Loading...
       </p>
 
       <div class="controls">
@@ -136,6 +140,6 @@
     </div>
   </div>
 
-  <script src="assets/js/office.js?v=3" defer></script>
+  <script src="assets/js/office.js?v=FINAL" defer></script>
 </body>
 </html>
