--- a/public/office.html
+++ b/public/office.html
@@ -4,93 +4,138 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PSA • Office Portal</title>
+
   <style>
     :root{
       --primary:#0033a0; --primary2:#0056d6;
       --bg:#f4f7ff; --card:#ffffff; --text:#1f2937;
       --muted:#6b7280; --border:#e5e7eb;
       --shadow: 0 10px 25px rgba(0,0,0,0.08);
-      --radius: 14px;
-      --okbg:#eaf7ef; --okbd:#bfe7cb; --ok:#0f5132;
-      --errbg:#fdecec; --errbd:#f2b8b8; --err:#842029;
+      --radius: 18px;
     }
+
     *{ box-sizing:border-box; }
     body{ margin:0; font-family: Arial, sans-serif; background: var(--bg); color: var(--text); }
 
+    /* Topbar */
     .topbar{
-      position: sticky; top:0; z-index: 10;
+      position: sticky;
+      top:0;
+      z-index: 10;
       background: linear-gradient(90deg, var(--primary), var(--primary2));
-      color:#fff; padding: 14px 18px;
+      color:#fff;
+      padding: 14px 18px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.18);
     }
+
     .topbar-inner{
-      max-width: 1400px; margin: 0 auto;
-      display:flex; align-items:center; justify-content: space-between; gap: 14px;
+      max-width: 1400px;
+      margin: 0 auto;
+      display:flex;
+      align-items:center;
+      justify-content: space-between;
+      gap: 14px;
     }
-    .brand-text{ display:flex; flex-direction:column; gap:2px; }
-    .brand-text h1{ margin:0; font-size: 18px; font-weight: 800; }
-    .brand-text p{ margin:0; font-size: 13px; opacity:.9; font-weight: 700; }
+
+    .brand{
+      display:flex;
+      align-items:center;
+      gap: 12px;
+    }
+
+    .logos{
+      display:flex;
+      align-items:center;
+      gap: 10px;
+    }
+    .logo{
+      height: 38px;
+      width: 38px;
+      border-radius: 50%;
+      background:#fff;
+      padding: 4px;
+      object-fit: contain;
+    }
+
+    .brand-text h1{
+      margin:0;
+      font-size: 18px;
+      font-weight: 900;
+      letter-spacing: .2px;
+    }
+    .brand-text p{
+      margin:2px 0 0;
+      font-size: 13px;
+      opacity: 0.95;
+      font-weight: 800;
+    }
 
     .right-tools{
-      display:flex; align-items:center; gap:10px;
+      display:flex;
+      align-items:center;
+      gap: 10px;
     }
 
     .user-pill{
-      display:flex; align-items:center; gap:10px;
+      display:flex;
+      align-items:center;
+      gap:10px;
       background: rgba(255,255,255,0.14);
       border: 1px solid rgba(255,255,255,0.22);
-      padding: 8px 12px; border-radius: 999px; font-size: 13px;
+      padding: 8px 12px;
+      border-radius: 999px;
+      font-size: 13px;
       white-space: nowrap;
       font-weight: 800;
     }
+
     .user-pill .dot{
-      height:8px; width:8px; border-radius:50%; background:#22c55e;
+      height:8px; width:8px;
+      border-radius:50%;
+      background:#22c55e;
       box-shadow: 0 0 0 3px rgba(34,197,94,0.22);
     }
 
     .logout-btn{
-      border: 1px solid rgba(255,255,255,0.32);
-      background: rgba(255,255,255,0.12);
+      border: 1px solid rgba(255,255,255,0.30);
+      background: rgba(255,255,255,0.14);
       color:#fff;
       font-weight: 900;
-      padding: 8px 12px;
+      padding: 8px 14px;
       border-radius: 999px;
-      cursor: pointer;
+      cursor:pointer;
     }
-    .logout-btn:hover{ background: rgba(255,255,255,0.18); }
-
-    .layout{
-      max-width: 1400px; margin: 22px auto; padding: 0 14px;
-      display:block;
+    .logout-btn:hover{
+      background: rgba(255,255,255,0.18);
     }
 
+    /* Page wrapper */
+    .wrap{
+      max-width: 1400px;
+      margin: 22px auto;
+      padding: 0 14px;
+    }
+
+    /* Card */
     .card{
       background: var(--card);
       border: 1px solid var(--border);
-      border-radius: 18px;
+      border-radius: var(--radius);
       box-shadow: var(--shadow);
       padding: 22px;
     }
 
-    .title-row{
-      display:flex;
-      align-items:flex-start;
-      justify-content: space-between;
-      gap: 12px;
-      flex-wrap: wrap;
-    }
-
-    .title-row h2{
+    .card h2{
       margin:0;
-      font-size: 30px;
-      letter-spacing: .2px;
+      font-size: 32px;
+      font-weight: 900;
       color:#0f172a;
     }
 
+    /* Center title (Province of Cebu) */
     .center-title{
-      width:100%;
       text-align:center;
-      margin-top: 10px;
+      margin-top: 14px;
     }
     .center-title h3{
       margin: 0;
@@ -103,8 +148,10 @@
       margin: 6px 0 0;
       color: var(--muted);
       font-weight: 800;
+      font-size: 13px;
     }
 
+    /* Controls row */
     .controls{
       display:flex;
       gap: 12px;
@@ -122,11 +169,6 @@
       outline:none;
       background:#fff;
     }
-    .input:focus{
-      border-color: rgba(0,51,160,0.35);
-      box-shadow: 0 0 0 3px rgba(0,51,160,0.12);
-    }
-
     .btn{
       border: none;
       border-radius: 999px;
@@ -136,26 +178,20 @@
       font-weight: 900;
       cursor: pointer;
       box-shadow: 0 6px 14px rgba(0,51,160,0.22);
-      display:inline-flex; align-items:center; gap:10px;
+      display:inline-flex;
+      align-items:center;
+      gap:10px;
     }
-    .btn:disabled{ opacity:.65; cursor:not-allowed; box-shadow:none; }
     .btn:hover{ filter: brightness(0.97); }
+    .btn:disabled{ opacity:.65; cursor:not-allowed; box-shadow:none; }
 
-    .spinner{
-      width:16px; height:16px; border-radius:50%;
-      border:2px solid rgba(255,255,255,0.55);
-      border-top-color:#fff;
-      animation: spin 0.8s linear infinite;
-      display:none;
-    }
-    .btn.loading .spinner{ display:inline-block; }
-    @keyframes spin{ to { transform: rotate(360deg); } }
-
+    /* Table */
     .table-wrap{
       overflow:auto;
       margin-top: 14px;
       border-radius: 14px;
       border: 1px solid var(--border);
+      background:#fff;
     }
     table{
       width:100%;
@@ -177,7 +213,6 @@
       z-index: 1;
       font-weight: 900;
     }
-
     .muted{
       color: var(--muted);
       font-weight: 800;
@@ -188,14 +223,13 @@
     }
   </style>
 
-  <!-- ✅ AUTH GUARD -->
+  <!-- ✅ AUTH GUARD (Office) -->
   <script>
     (function () {
       const email = localStorage.getItem("email");
-      const role = localStorage.getItem("role");
+      const role = (localStorage.getItem("role") || "").toLowerCase();
       const sessionAt = Number(localStorage.getItem("sessionAt") || "0");
-
-      const MAX_AGE_MS = 30 * 60 * 1000; // 30 mins
+      const MAX_AGE_MS = 30 * 60 * 1000;
 
       if (!email || !role || !sessionAt || (Date.now() - sessionAt) > MAX_AGE_MS) {
         localStorage.clear();
@@ -203,8 +237,7 @@
         return;
       }
 
-      // only office role
-      if ((role || "").toLowerCase() !== "office") {
+      if (role !== "office") {
         location.replace("user.html");
         return;
       }
@@ -213,11 +246,20 @@
 </head>
 
 <body>
+  <!-- Topbar -->
   <div class="topbar">
     <div class="topbar-inner">
-      <div class="brand-text">
-        <h1>PSA • National ID System</h1>
-        <p>Office Portal</p>
+
+      <div class="brand">
+        <div class="logos">
+          <!-- ✅ Logo balik -->
+          <img class="logo" src="assets/images/psa.png" alt="PSA Logo">
+          <img class="logo" src="assets/images/philsys.png" alt="PhilSys Logo">
+        </div>
+        <div class="brand-text">
+          <h1>PSA • National ID System</h1>
+          <p>Office Portal</p>
+        </div>
       </div>
 
       <div class="right-tools">
@@ -226,16 +268,17 @@
           <span id="userEmail">user@example.gov.ph</span>
         </div>
 
-        <button class="logout-btn" id="logoutBtn" type="button">Logout</button>
+        <!-- ✅ Logout -->
+        <button id="logoutBtn" class="logout-btn" type="button">Logout</button>
       </div>
+
     </div>
   </div>
 
-  <div class="layout">
+  <!-- Content -->
+  <div class="wrap">
     <section class="card">
-      <div class="title-row">
-        <h2>Failed Registration List</h2>
-      </div>
+      <h2>Failed Registration List</h2>
 
       <div class="center-title">
         <h3 id="provinceTitle">Province of —</h3>
@@ -244,10 +287,7 @@
 
       <div class="controls">
         <input id="qInput" class="input" type="text" placeholder="Search TRN / Fullname / Address / Province" />
-        <button id="refreshBtn" class="btn" type="button">
-          <span class="spinner" id="refreshSpinner"></span>
-          <span>Refresh</span>
-        </button>
+        <button id="refreshBtn" class="btn" type="button">Refresh</button>
       </div>
 
       <div class="table-wrap">
@@ -270,6 +310,24 @@
     </section>
   </div>
 
-  <script src="assets/js/office.js?v=10"></script>
+  <script>
+    // ✅ show email
+    const emailEl = document.getElementById("userEmail");
+    if (emailEl) emailEl.textContent = localStorage.getItem("email") || "";
+
+    // ✅ logout
+    const logoutBtn = document.getElementById("logoutBtn");
+    logoutBtn && logoutBtn.addEventListener("click", () => {
+      localStorage.removeItem("email");
+      localStorage.removeItem("role");
+      localStorage.removeItem("sessionAt");
+      localStorage.removeItem("position");
+      localStorage.removeItem("province");
+      location.replace("index.html");
+    });
+  </script>
+
+  <!-- keep your existing office.js -->
+  <script src="assets/js/office.js?v=11"></script>
 </body>
 </html>
