--- a/public/office.html
+++ b/public/office.html
@@ -16,6 +16,7 @@
     *{ box-sizing:border-box; }
     body{ margin:0; font-family: Arial, sans-serif; background: var(--bg); color: var(--text); }
 
+    /* Topbar */
     .topbar{
       position: sticky; top:0; z-index: 10;
       background: linear-gradient(90deg, var(--primary), var(--primary2));
@@ -40,7 +41,6 @@
       padding: 4px;
       object-fit: contain;
     }
-
     .brand-text h1{ margin:0; font-size: 18px; font-weight: 900; }
     .brand-text p{ margin:2px 0 0; font-size: 13px; opacity: .95; font-weight: 800; }
 
@@ -62,6 +62,18 @@
       box-shadow: 0 0 0 3px rgba(34,197,94,0.22);
     }
 
+    .logout-btn{
+      border: 1px solid rgba(255,255,255,0.35);
+      background: rgba(255,255,255,0.14);
+      color:#fff;
+      font-weight: 900;
+      padding: 8px 14px;
+      border-radius: 999px;
+      cursor:pointer;
+    }
+    .logout-btn:hover{ filter: brightness(0.96); }
+
+    /* Content */
     .wrap{
       max-width: 1400px;
       margin: 22px auto;
@@ -131,6 +143,7 @@
       align-items:center;
       gap:10px;
     }
+    .btn:hover{ filter: brightness(0.96); }
 
     .table-wrap{
       overflow:auto;
@@ -163,6 +176,7 @@
 
     @media (max-width: 950px){
       .input{ min-width: 100%; }
+      .brand-text h1{ font-size: 16px; }
     }
   </style>
 
@@ -194,9 +208,9 @@
 
       <div class="brand">
         <div class="logos">
-          <!-- ✅ ABSOLUTE PATH para sure -->
-          <img class="logo" src="/assets/images/psa.png" alt="PSA Logo" onerror="this.style.display='none'">
-          <img class="logo" src="/assets/images/philsys.png" alt="PhilSys Logo" onerror="this.style.display='none'">
+          <!-- ✅ CORRECT PATH based on your repo: public/assets/images/... -->
+          <img class="logo" src="assets/images/psa.png" alt="PSA Logo">
+          <img class="logo" src="assets/images/philsys.png" alt="PhilSys Logo">
         </div>
         <div class="brand-text">
           <h1>PSA • National ID System</h1>
@@ -210,19 +224,7 @@
           <span id="userEmail">user@example.gov.ph</span>
         </div>
 
-        <!-- ✅ Logout (INLINE STYLE para mugawas gyud) -->
-        <button id="logoutBtn" type="button"
-          style="
-            border: 1px solid rgba(255,255,255,0.35);
-            background: rgba(255,255,255,0.14);
-            color:#fff;
-            font-weight: 900;
-            padding: 8px 14px;
-            border-radius: 999px;
-            cursor:pointer;
-          ">
-          Logout
-        </button>
+        <button id="logoutBtn" class="logout-btn" type="button">Logout</button>
       </div>
 
     </div>
@@ -263,11 +265,11 @@
   </div>
 
   <script>
-    // ✅ show email
+    // show logged in email
     const emailEl = document.getElementById("userEmail");
     if (emailEl) emailEl.textContent = localStorage.getItem("email") || "";
 
-    // ✅ logout
+    // logout
     const logoutBtn = document.getElementById("logoutBtn");
     logoutBtn && logoutBtn.addEventListener("click", () => {
       localStorage.removeItem("email");
@@ -279,7 +281,7 @@
     });
   </script>
 
-  <!-- keep your existing office.js -->
-  <script src="/assets/js/office.js?v=99"></script>
+  <!-- keep your office.js -->
+  <script src="assets/js/office.js?v=100" defer></script>
 </body>
 </html>
